--- a/_config.yml
+++ b/_config.yml
@@ -113,15 +113,15 @@ disqus_shortname: tello-vision
 wakatime_username: "telloviz"
 
 # mailchimp embedded form url (newsletter):
-mailchimp_form_url: "" # https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
+# mailchimp_form_url: "" # https://sujaykundu.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0
 
 # contact form - (choose formspress or getform)
 # getform_endpoint: d4103f46-9fbd-4438-9eee-5337432dd46e
 formspree_email: f/meqbalrl
 
 # releases - widget can be (sidebar, modal or embed)
-olvy_organization: devlopr
-olvy_widget_type: sidebar
+# olvy_organization: devlopr
+# olvy_widget_type: sidebar
 
 # syntax highlighter
 markdown: kramdown
