change about me

--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ author_education_details:
                 college_name: California State University Fullerton
                 college_url: https://www.fullerton.edu
                 college_degree: Computer Science
-                description: 4th year in Bachelor of Science 
+                description: 3rd/4th year in Bachelor of Science 
                 visibility: true
 
 # Projects
