--- a/_data/galleries/overview.yml
+++ b/_data/galleries/overview.yml
@@ -17,3 +17,12 @@
     sizes:
     - snake-logo-thumbnail.png
     thumbnail: snake-logo-thumbnail.png
+-
+  title: John Bombermann & Doug Diggins
+  directory: bomber
+  preview:
+    filename: 36.jpg
+    original: 36.jpg
+    sizes:
+    - 36.jpg
+    thumbnail: 36-t.jpg
