--- a/_data/galleries/overview.yml
+++ b/_data/galleries/overview.yml
@@ -1,6 +1,6 @@
 
 -
-  title: Office
+  title: 'My Office : 3ds Max + Chaos Corona'
   directory: office
   preview:
     filename: office.png
@@ -9,7 +9,7 @@
     - office-thumbnail.png
     thumbnail: office-thumbnail.png
 -
-  title: Snake
+  title: 'Snake : C++, SFML,  Cereal'
   directory: snake
   preview:
     filename: snake-logo.png
@@ -18,10 +18,10 @@
     - snake-logo-thumbnail.png
     thumbnail: snake-logo-thumbnail.png
 -
-  title: John Bombermann & Doug Diggins
+  title: Bob Bömbermann & Dugg Diggins
   directory: bomber
   preview:
-    filename: 36.jpg
+    filename: 36
     original: 36.jpg
     sizes:
     - 36.jpg
