--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ author_bio: Hi, my name is Josh! I love creating! I hope you find something that
 author_email: "lollisjosh@csu.fullerton.edu"
 author_location: Fullerton CA, USA
 author_website_url: "https://telloviz.netlify.app"
-typewrite-text: Developer | Designer | Digital Artist | Dual-Instrumentalist
+typewrite-text: Game Developer | Programmer | Artist | Musician | Composer
 hero_cover_img: office.png # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
