--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ author_project_details:
                 visibility: true
               - project_thumbnail: gyofish.PNG
                 project_title: Gyo Fish!
-                project_description: A Summer Game-Jam project my brother and I challenged ourselves with.
+                project_description: A Summer Game-Jam project with my brother Caleb. Developed by Me, Art by Caleb
                 project_url: https://github.com/TelloViz/ChompChomp
                 visibility: true
 
@@ -127,11 +127,6 @@ formspree_email: f/meqbalrl
 
 # syntax highlighter
 markdown: kramdown
-# kramdown:
-#   input: GFM
-#   syntax_highlighter: none
-#   hard_wrap: false
-#   include: ["_includes"]
 
 highlighter: rouge
 permalink: pretty
