--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author_education_details:
                 visibility: true
 
 # Projects
-author_project_details: ../assets/img/gallery/snake/snake-logo-thumbnail.png
+author_project_details: snake-logo-thumbnail.png
               - project_thumbnail: 
                 project_title: Snake
                 project_description: Snake Clone built in C++ using SFML.
