--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ author_education_details:
                 visibility: true
 
 # Projects
-author_project_details: snake-logo-thumbnail.png
-              - project_thumbnail: 
+author_project_details: 
+              - project_thumbnail: snake-logo-thumbnail.png
                 project_title: Snake
                 project_description: Snake Clone built in C++ using SFML.
                 project_url: https://github.com/TelloViz/Snake-SFML
