--- a/_config.yml
+++ b/_config.yml
@@ -93,6 +93,11 @@ author_project_details:
                 project_description: A Summer Game-Jam project with my brother Caleb. Developed by Me, Art by Caleb
                 project_url: https://github.com/TelloViz/ChompChomp
                 visibility: true
+              - project_thumbnail: heltowers.PNG
+                project_title: H.E.L. Towers
+                project_description: A Video Game Development Club Project imagined and overseen by Digx7
+                project_url: https://github.com/TelloViz/HellTowers.git
+                visibility: true
 
 # social links
 twitter_username: 
