--- a/_config.yml
+++ b/_config.yml
@@ -98,10 +98,10 @@ author_project_details:
                 project_description: A Summer Game-Jam project with my brother Caleb. Developed by Me, Art by Caleb
                 project_url: https://github.com/TelloViz/ChompChomp
                 visibility: true
-              - project_thumbnail: heltowers.PNG
-                project_title: H.E.L. Towers
-                project_description: A Video Game Development Club Project imagined and overseen by Digx7. I created the README, wrote code, and provided guidance to software team.
-                project_url: https://github.com/TelloViz/HellTowers.git
+              - project_thumbnail: surfer-t.PNG
+                project_title: Neon Cloud (Server Surfer)
+                project_description: Summer mentorship project in Unity Engine
+                project_url: https://github.com/TelloViz/NeonCloud
                 visibility: true
 
 # social links
