--- a/_data/galleries/overview.yml
+++ b/_data/galleries/overview.yml
@@ -9,6 +9,15 @@
     - snake-logo-thumbnail.png
     thumbnail: snake-logo-thumbnail.png
 -
+  title: 'Neon Cloud(Server Surfer) : Unity mentorship project'
+  directory: neoncloud
+  preview:
+    filename: surfer-t.png
+    original: surfer-t.png
+    sizes:
+    - surfer-t.png
+    thumbnail: surfer-t.png
+-
   title: 'My Office 3D Render : 3ds Max + Chaos Corona'
   directory: office
   preview:
