--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ author_education_details:
 author_project_details: 
               - project_thumbnail: snake-logo.png
                 project_title: Snake
-                project_description: Snake Clone built in C++ using SFML w/ art by me
+                project_description: Snake built in C++ using SFML w/ art by me
                 project_url: https://telloviz.netlify.app/gallery/snake
                 visibility: true
               - project_thumbnail: gyofish.PNG
