lunar lander gallery entry

--- a/_data/galleries/overview.yml
+++ b/_data/galleries/overview.yml
@@ -1,4 +1,3 @@
-
 -
   title: 'Snake : C++, SFML,  Cereal'
   directory: snake
@@ -8,6 +7,15 @@
     sizes:
     - snake-logo-thumbnail.png
     thumbnail: snake-logo-thumbnail.png
+-
+  title: 'Lunar Lander : Unity Engine'
+  directory: lunar
+  preview:
+    filename: lunar-t.png
+    original: lunar-t.png
+    sizes:
+    - lunar-t.png
+    thumbnail: lunar-t.png
 -
   title: 'Neon Cloud : Unity mentorship project'
   directory: neoncloud
