add more art, and change pic

--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ urls:
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: joshlollis.png
+author_logo: me-t.png
 author: Josh Lollis
 author_bio: Hi, my name is Josh! I love creating! I hope you find something that inspires you here. :D
 author_email: "lollisjosh@csu.fullerton.edu"
