--- a/_data/galleries/chomp.yml
+++ b/_data/galleries/chomp.yml
@@ -11,3 +11,8 @@ pictures:
   sizes:
   - chomp-t.png
   thumbnail: chomp-t.png
+  - filename: fishFrame
+  original: fishFrame.png
+  sizes:
+  - fishFrame.png
+  thumbnail: fishFrame.png
