--- a/_data/music/overview.yml
+++ b/_data/music/overview.yml
@@ -1,5 +1,5 @@
 -
-  title: 'Eek My Boyfriend Turned Into a Worm'
+  title: 'Eek! My Boyfriend Turned Into a Worm'
   directory: worm
   preview:
     filename: worm-title
