eek page updates

--- a/_data/music/overview.yml
+++ b/_data/music/overview.yml
@@ -6,7 +6,7 @@
     original: worm-title.png
     sizes:
     - worm-title.png
-    thumbnail: worm-title.png
+    thumbnail: worm-title-t.png
 -
   title: Guitar & Bass
   directory: guitar
