--- a/_data/music/worm.yml
+++ b/_data/music/worm.yml
@@ -4,10 +4,10 @@ preview:
   original: worm-title.png
   sizes:
   - worm-title.png
-  thumbnail: worm-title.png
+  thumbnail: worm-title-t.png
 pictures:
 - filename: worm-title
   original: worm-title.png
   sizes:
   - worm-title.png
-  thumbnail: worm-title.png
+  thumbnail: worm-title-t.png
