Was able to serve the web page for the first time.

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: devlopr
-subtitle: A Portfolio Jekyll Theme Built for Developers
+title: austinkliebhan
+subtitle: A Portfolio Built on a Jekyll Theme Built for Developers
 description: >- # this means to ignore newlines until "baseurl:"
   devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
 
-url: "" # the base hostname & protocol for your site, e.g. https://example.github.io
-baseurl: "" # the subpath of your site, e.g. /blog
+url: https://austinkliebhan.github.io # the base hostname & protocol for your site, e.g. https://example.github.io
+baseurl: / # the subpath of your site, e.g. /blog
 
 # Navigation
 urls:
@@ -25,36 +25,30 @@ urls:
 # Edit Author details (For multi authors check _data/authors.yml)
 
 author_logo: profile.png
-author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "mail@sujaykundu.com"
-author_location: India
-author_website_url: "https://sujaykundu.com"
+author: Austin Kliebhan
+author_bio: Hi, my name is Austin Kliebhan. I built this site using devlopr-jekyll :D
+author_email: "austin.kliebhan@gmail.com"
+author_location: United States
+author_website_url: https://austinkliebhan.github.io
 typewrite-text: devlopr is a jekyll framework built for developers. You can edit this in _config.yml file
 hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
 author_work_experiences:
-            - company_name: Google
+            - company_name: Spins
               company_logo: google.png
               company_url: https://google.com
-              designation: Software Engineer
-              description: Worked on various Google Products
-              visibility: true
-            - company_name: Microsoft
-              company_logo: microsoft.png
-              company_url: https://microsoft.com
-              designation: Azure Developer
-              description: Worked on various Azure Cloud Products
+              designation: Data Engineer
+              description: Worked on various Spins Products
               visibility: true
 
 # Education
 author_education_details:
               - college_logo: mit.png
-                college_name: MIT
+                college_name: University of Iowa
                 college_url: https://mit.org
-                college_degree: CS Engineer
-                description: Bachelor of Technology
+                college_degree: BS Chemical Engineering
+                description: Bachelor of Engineering
                 visibility: true
 
 # Projects
