--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -4,20 +4,18 @@
 
 name: "Jekyll CI"
 
-
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ master ]
+    branches: [master]
   # Triggers the workflow on push or pull request events but only for the main branch
   schedule:
     # Runs at 6am UTC every Monday
-    - cron: '0 6 * * 1'
-
+    - cron: "0 6 * * 1"
 
 jobs:
   # Check the Jekyll itself for errors and syntax
@@ -28,7 +26,7 @@ jobs:
     # Check that the Jekyll can actually build
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Build the site in the jekyll/builder container
         run: |
           docker run \
@@ -43,13 +41,13 @@ jobs:
     # Check markdown files are markdown-lint compliant
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Lint markdown files with markdown-lint
         uses: articulate/actions-markdownlint@v1.1.0
         with:
           # Includes some specific rules to ignore
           config: .github/workflows/markdownlint-config.json
-          files: '_posts/**/*.md'
+          files: "_posts/**/*.md"
           # Ignore the built website, might have some funky files
           ignore: _site/
           # Try to fix basic errors
