--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ subtitle: Geospatial and Earth Observation
 description: >- # this means to ignore newlines until "baseurl:"
   I am a Geodetic Engineer specializing in geoinformatics and remote sensing.
 
-url: "https://jarencecasisirano.github.io/jareo-jekyll" # the base hostname & protocol for your site, e.g. https://example.github.io
-# baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://jarencecasisirano.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
+baseurl: "/blog" # the subpath of your site, e.g. /blog
 
 # # Theme
 # theme: devlopr-jekyll
